force-app/main/default/objects/Transacao__c/Transacao__c.object-meta.xml
<CustomObject>
    <label>Transação</label>
    <nameField>
        <label>Transação Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>