force-app/main/default/objects/Transacao__c/fields/BancoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>BancoRelacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banco relacionado</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transa_es</relationshipName>
    <type>Lookup</type>
</CustomField>