force-app/main/default/objects/Transacao__c/fields/Frequencia__c.field-meta.xml
<CustomField>
    <fullName>Frequencia__c</fullName>
    <label>Frequência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensal</fullName>
                <default>true</default>
                <label>Mensal</label>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
                <isActive>false</isActive>
                <label>Semanal</label>
            </value>
            <value>
                <fullName>Unica</fullName>
                <isActive>false</isActive>
                <label>Unica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>