force-app/main/default/objects/Transacao__c/recordTypes/Saida.recordType-meta.xml
<RecordType>
    <fullName>Saida</fullName>
    <active>true</active>
    <label>Saída</label>
</RecordType>